# hw12

./: main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 1f67e5ae5f8c_add_user.py  ec04b9effcae_init.py
src/: schemas.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py
src/services/: auth.py
